GNOME Bugzilla – Bug 639929
State attribute on GdkEventKey is missing GdkModifierType annotation (it has C type guint)
Last modified: 2011-01-20 10:40:40 UTC
The state attribute in GdkEventKey cannot be properly wrapped in the GI PyGObject bindings because the flag type annotation (GdkModifierType) is missing. This annotation is also missing in other event types which also have a state attribute such as GdkEventMotion, GdkEventButton, GdkEventScroll, GdkEventCrossing.
Created attachment 178700 [details] [review] Add annotation (type GdkModifierType) to state attributes in many GdkEvent structs. The state attribute is available in GdkEventMotion, GdkEventButton, GdkEventScroll, GdkEventKey and GdkEventCrossing. This type annotation fixes the wrapping of this attribute in the GI PyGObject bindings.
Comment on attachment 178700 [details] [review] Add annotation (type GdkModifierType) to state attributes in many GdkEvent structs. Can you please fix the line breaking of the commit log? Otherwise this looks good, thanks! Please push.